# Code-Challenge-with-LLM

./: README.md  package-lock.json  vercel.json
backend/: .gitignore  database.db  pyproject.toml  requirements.txt  server.py  vercel.json
backend/src/: ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx  Logo.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
frontend/src/utils/: api.js
